--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.7.5",
+    "@prisma/client": "^5.21.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
+    "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.453.0",
+    "mime": "^4.0.4",
     "next": "14.2.15",
+    "prisma": "^5.21.1",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.5.4",
