--- a/package.json
+++ b/package.json
@@ -12,17 +12,21 @@
     "@clerk/nextjs": "^5.7.5",
     "@hookform/resolvers": "^3.9.0",
     "@prisma/client": "^5.21.1",
+    "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-progress": "^1.1.0",
     "@radix-ui/react-select": "^2.1.2",
+    "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.0",
     "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
+    "email-validator": "^2.0.4",
     "lucide-react": "^0.453.0",
     "mime": "^4.0.4",
     "next": "14.2.15",
+    "payaza-web-sdk": "^1.0.4",
     "prisma": "^5.21.1",
     "react": "^18",
     "react-dom": "^18",
