--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.7.5",
+    "@google/generative-ai": "^0.21.0",
     "@hookform/resolvers": "^3.9.0",
     "@prisma/client": "^5.21.1",
     "@radix-ui/react-avatar": "^1.1.1",
@@ -21,6 +22,7 @@
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.3",
     "@tanstack/react-query": "^5.59.16",
     "@tanstack/react-query-devtools": "^5.59.16",
@@ -31,6 +33,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "email-validator": "^2.0.4",
+    "embla-carousel-react": "^8.3.1",
     "lucide-react": "^0.453.0",
     "mime": "^4.0.4",
     "next": "14.2.15",
