--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "mime": "^4.0.4",
     "next": "14.2.15",
     "next-themes": "^0.3.0",
+    "nodemailer": "^6.9.16",
     "payaza-web-sdk": "^1.0.4",
     "prisma": "^5.21.1",
     "react": "^18",
@@ -51,6 +52,7 @@
   },
   "devDependencies": {
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.16",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "postcss": "^8",
